--- a/src/app/core/pages/contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/contacts/add-contact/add-contact.component.html
@@ -122,7 +122,8 @@
     <div class="card flex col-12 gap-3 justify-content-end p-0 mt-2">
       <p-button
         type="submit"
-        label="Salvar contato"
+        icon="pi pi-check"
+        label="Salvar"
         [disabled]="newContact.invalid || loading"
         [loading]="loading"
       ></p-button>
