--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -1,1 +1,136 @@
-<p>new-reminder works!</p>
+<gl-title
+  label1="Novo"
+  label2="lembrete"
+/>
+
+<gl-back-button />
+
+<form
+  [formGroup]="newReminder"
+  class="formgrid grid gap-3 mt-3"
+>
+  <fieldset class="field col-12 m-0 p-0">
+    <legend>
+      <label
+        for="title"
+        class="block mb-1"
+      >
+        Título
+      </label>
+    </legend>
+    <input
+      type="text"
+      class="w-full"
+      pInputText
+      formControlName="title"
+      placeholder="Digite o título da mensagem"
+      id="title"
+    />
+  </fieldset>
+
+  <fieldset class="field col-12 m-0 p-0">
+    <legend>
+      <label
+        for="description"
+        class="block mb-1"
+      >
+        Mensagem
+      </label>
+    </legend>
+
+    <textarea
+      rows="5"
+      class="w-full"
+      pInputTextarea
+      id="description"
+      formControlName="description"
+    ></textarea>
+  </fieldset>
+
+  <fieldset class="field col-12 m-0 p-0">
+    <legend>
+      <label
+        for="scheduled"
+        class="block mb-1"
+      >
+        Agendamento
+      </label>
+    </legend>
+    <p-calendar
+      formControlName="scheduled"
+      inputId="scheduled"
+      [showIcon]="true"
+      [showTime]="true"
+      styleClass="flex"
+      dateFormat="dd/mm/yy -"
+    />
+  </fieldset>
+
+  <fieldset class="max-w-full field col-12 m-0 p-0">
+    <legend>
+      <label
+        for="usersToReminder"
+        class="block mb-1"
+      >
+        Destinatário
+      </label>
+    </legend>
+    <p-multiSelect
+      inputId="usersToReminder"
+      optionLabel="name"
+      placeholder="Selecione"
+      formControlName="usersToReminder"
+      [filter]="true"
+      styleClass="flex"
+      [showToggleAll]="false"
+      emptyMessage="Nenhum contato cadastrado"
+      emptyFilterMessage="Nenhum contato encontrado"
+      [options]="contacts"
+      optionValue="id"
+      optionLabel="name"
+      [maxSelectedLabels]="2"
+      selectedItemsLabel="{} selecionados"
+    >
+      <ng-template
+        let-value
+        pTemplate="selectedItems"
+      >
+        <span class="overflow-hidden">
+          <div
+            class="inline-flex align-items-center gap-2 bg-blue-50 mx-1 p-2 border-1 border-round-md border-blue-100"
+            *ngFor="let option of value"
+          >
+            <span class="text-blue-900">{{ option.name }}</span>
+            <p-tag
+              severity="success"
+              [style]="{ backgroundColor: 'var(--secondary-color)' }"
+              value="Email"
+            />
+          </div>
+          <div *ngIf="!value || value.length === 0">Selecione</div>
+        </span>
+      </ng-template>
+      <ng-template
+        let-contact
+        pTemplate="item"
+      >
+        <span class="flex align-items-center gap-2">
+          <span>{{ contact.name }}</span>
+          <p-tag
+            severity="success"
+            [style]="{ backgroundColor: 'var(--secondary-color)' }"
+            value="Email"
+          />
+        </span>
+      </ng-template>
+    </p-multiSelect>
+  </fieldset>
+
+  <div class="card flex col-12 gap-3 justify-content-end p-0 mt-3">
+    <p-button
+      icon="pi pi-check"
+      label="Salvar"
+      (onClick)="onSubmit()"
+    ></p-button>
+  </div>
+</form>
