feat: ensure min date to save a reminder to be now

--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -61,6 +61,7 @@
       inputId="scheduled"
       [showIcon]="true"
       [showTime]="true"
+      [minDate]="newDate"
       styleClass="flex"
       dateFormat="dd/mm/yy -"
     />
