--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -7,131 +7,135 @@
 
 <form
   [formGroup]="newReminder"
-  class="formgrid grid gap-3 mt-3"
+  class="mt-3 formgrid grid gap-3"
 >
-  <fieldset class="field col-12 m-0 p-0">
-    <legend>
-      <label
-        for="title"
-        class="block mb-1"
-      >
-        Título
-      </label>
-    </legend>
-    <input
-      type="text"
-      class="w-full"
-      pInputText
-      formControlName="title"
-      placeholder="Digite o título da mensagem"
-      id="title"
-    />
-  </fieldset>
+  <div class="col-12 lg:col px-0 flex flex-column gap-3">
+    <fieldset class="field col-12 m-0 p-0">
+      <legend>
+        <label
+          for="title"
+          class="block mb-1"
+        >
+          Título
+        </label>
+      </legend>
+      <input
+        type="text"
+        class="w-full"
+        pInputText
+        formControlName="title"
+        placeholder="Digite o título da mensagem"
+        id="title"
+      />
+    </fieldset>
 
-  <fieldset class="field col-12 m-0 p-0">
-    <legend>
-      <label
-        for="description"
-        class="block mb-1"
-      >
-        Mensagem
-      </label>
-    </legend>
+    <fieldset class="field col-12 m-0 p-0">
+      <legend>
+        <label
+          for="description"
+          class="block mb-1"
+        >
+          Mensagem
+        </label>
+      </legend>
 
-    <textarea
-      rows="6"
-      class="w-full"
-      pInputTextarea
-      id="description"
-      formControlName="description"
-    ></textarea>
-  </fieldset>
+      <textarea
+        rows="6"
+        class="w-full"
+        pInputTextarea
+        id="description"
+        formControlName="description"
+        [autoResize]="true"
+      ></textarea>
+    </fieldset>
 
-  <fieldset class="field col-12 m-0 p-0">
-    <legend>
-      <label
-        for="scheduled"
-        class="block mb-1"
+    <fieldset class="max-w-full field col-12 m-0 p-0">
+      <legend>
+        <label
+          for="usersToReminder"
+          class="block mb-1"
+        >
+          Destinatário
+        </label>
+      </legend>
+      <p-multiSelect
+        *ngIf="contacts$ | async as contacts"
+        inputId="usersToReminder"
+        optionLabel="name"
+        placeholder="Selecione"
+        formControlName="usersToReminder"
+        [filter]="true"
+        styleClass="flex"
+        [showToggleAll]="false"
+        emptyMessage="Nenhum contato cadastrado"
+        emptyFilterMessage="Nenhum contato encontrado"
+        [options]="contacts"
+        optionValue="id"
+        optionLabel="name"
       >
-        Agendamento
-      </label>
-    </legend>
-    <p-calendar
-      formControlName="scheduled"
-      inputId="scheduled"
-      [showIcon]="true"
-      [showTime]="true"
-      [minDate]="newDate"
-      styleClass="flex"
-      dateFormat="dd/mm/yy -"
-    />
-  </fieldset>
-
-  <fieldset class="max-w-full field col-12 m-0 p-0">
-    <legend>
-      <label
-        for="usersToReminder"
-        class="block mb-1"
-      >
-        Destinatário
-      </label>
-    </legend>
-    <p-multiSelect
-      *ngIf="contacts$ | async as contacts"
-      inputId="usersToReminder"
-      optionLabel="name"
-      placeholder="Selecione"
-      formControlName="usersToReminder"
-      [filter]="true"
-      styleClass="flex"
-      [showToggleAll]="false"
-      emptyMessage="Nenhum contato cadastrado"
-      emptyFilterMessage="Nenhum contato encontrado"
-      [options]="contacts"
-      optionValue="id"
-      optionLabel="name"
-    >
-      <ng-template
-        let-value
-        pTemplate="selectedItems"
-      >
-        <span class="overflow-hidden">
-          <div
-            class="inline-flex align-items-center gap-2 bg-blue-50 mx-1 p-2 border-1 border-round-md border-blue-100"
-            *ngFor="let option of value"
-          >
-            <span class="text-blue-900">{{ option.name }}</span>
+        <ng-template
+          let-value
+          pTemplate="selectedItems"
+        >
+          <span class="overflow-hidden">
+            <div
+              class="inline-flex align-items-center gap-2 bg-blue-50 mx-1 p-2 border-1 border-round-md border-blue-100"
+              *ngFor="let option of value"
+            >
+              <span class="text-blue-900 font-medium">{{ option.name }}</span>
+              <p-tag
+                severity="success"
+                [style]="{ backgroundColor: 'var(--secondary-color)' }"
+                value="Email"
+              />
+            </div>
+            <div *ngIf="!value || value.length === 0">Selecione</div>
+          </span>
+        </ng-template>
+        <ng-template
+          let-contact
+          pTemplate="item"
+        >
+          <span class="flex align-items-center gap-2">
+            <span>{{ contact.name }}</span>
             <p-tag
               severity="success"
               [style]="{ backgroundColor: 'var(--secondary-color)' }"
               value="Email"
             />
-          </div>
-          <div *ngIf="!value || value.length === 0">Selecione</div>
-        </span>
-      </ng-template>
-      <ng-template
-        let-contact
-        pTemplate="item"
-      >
-        <span class="flex align-items-center gap-2">
-          <span>{{ contact.name }}</span>
-          <p-tag
-            severity="success"
-            [style]="{ backgroundColor: 'var(--secondary-color)' }"
-            value="Email"
-          />
-        </span>
-      </ng-template>
-    </p-multiSelect>
-  </fieldset>
+          </span>
+        </ng-template>
+      </p-multiSelect>
+    </fieldset>
+  </div>
+  <div class="col-12 lg:col px-0 flex flex-column gap-3">
+    <fieldset class="field col-12 m-0 p-0">
+      <legend>
+        <label
+          for="scheduled"
+          class="block mb-1"
+        >
+          Agendamento
+        </label>
+      </legend>
+      <p-calendar
+        formControlName="scheduled"
+        inputId="scheduled"
+        [showIcon]="true"
+        [showTime]="true"
+        [minDate]="newDate"
+        styleClass="flex"
+        dateFormat="dd/mm/yy -"
+      />
+    </fieldset>
+  </div>
 
   <div class="card flex col-12 gap-3 justify-content-end p-0 mt-3">
     <p-button
       icon="pi pi-check"
       label="Salvar"
       (onClick)="onSubmit()"
-      [disabled]="newReminder.invalid || loading"
+      [disabled]="loading"
       [loading]="loading"
     ></p-button>
   </div>
