refactor: change plataform to channel

--- a/src/app/core/pages/contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/contacts/add-contact/add-contact.component.html
@@ -64,7 +64,7 @@
       <p-dropdown
         styleClass="flex"
         formControlName="platform"
-        [options]="platforms"
+        [options]="channels"
         optionLabel="label"
         optionValue="value"
         placeholder="Selecione uma plataforma"
