--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -123,7 +123,7 @@
         inputId="scheduled"
         [showIcon]="true"
         [showTime]="true"
-        [minDate]="newDate"
+        [minDate]="minDate"
         styleClass="flex"
         dateFormat="dd/mm/yy -"
       />
