--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -62,6 +62,7 @@
       label="Configurações"
       icon=" pi pi-cog"
       [outlined]="true"
+      routerLink="profile"
       (click)="onClickMenuOption()"
     ></p-button>
   </ng-template>
@@ -91,7 +92,10 @@
       >
         <h4
           *ngIf="userInfo$ | async as userInfo"
-          class="font-medium text-sm">{{ userInfo.name | nameAbbreviation }}</h4>
+          class="font-medium text-sm"
+        >
+          {{ userInfo.name | nameAbbreviation }}
+        </h4>
         <p-avatar
           icon="pi pi-user"
           shape="circle"
