--- a/src/app/core/pages/user-account/register/register.component.scss
+++ b/src/app/core/pages/user-account/register/register.component.scss
@@ -1,6 +1,11 @@
 :host {
   main {
-    background-color: #222;
+    background: rgb(30, 30, 30);
+    background: linear-gradient(
+      216deg,
+      rgba(30, 30, 30, 1) 0%,
+      rgba(0, 52, 89, 1) 59%,
+      rgba(0, 166, 203, 1) 100%
+    );
   }
 }
-
