style: add background animation register account

--- a/src/app/core/pages/user-account/login/login.component.html
+++ b/src/app/core/pages/user-account/login/login.component.html
@@ -53,6 +53,7 @@
         </fieldset>
 
         <a
+          *ngIf="false"
           class="no-underline hover:underline text-blue-700 align-self-end"
           routerLink="#"
           >Esqueci minha senha?</a
