--- a/src/app/core/pages/user-account/register/register.component.scss
+++ b/src/app/core/pages/user-account/register/register.component.scss
@@ -1,11 +1,21 @@
 :host {
   main {
-    background: rgb(30, 30, 30);
-    background: linear-gradient(
-      216deg,
-      rgba(30, 30, 30, 1) 0%,
-      rgba(0, 52, 89, 1) 59%,
-      rgba(0, 166, 203, 1) 100%
-    );
+    background: #003459;
+    background: linear-gradient(225deg, #00a6cb, #003459);
+    background-size: 400% 400%;
+    animation: gradient-animation 15s ease infinite;
+    height: 100vh;
+  }
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
