--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -84,7 +84,10 @@
           size="small"
           [link]="true"
           [loading]="loading"
-          [disabled]="contactToEditForm.invalid || loading"
+          type="submit"
+          [disabled]="
+            contactToEditForm.invalid || loading || contactToEditForm.pristine
+          "
           (click)="onSave()"
         ></p-button>
       </div>
@@ -125,53 +128,49 @@
   </div>
 </div>
 
-<div *ngIf="contacts$ | async as contacts">
+<ul class="px-0 pt-2 flex flex-column gap-3">
   <ul class="px-0 pt-2 flex flex-column gap-3">
-    <ng-container *ngIf="contacts.length > 0; else noContent">
-      <ul class="px-0 pt-2 flex flex-column gap-3">
-        <ng-container *ngFor="let contact of contacts">
-          <li
-            class="flex justify-content-between align-items-center px-3 py-2 bg-white shadow-1 border-round-xl"
-          >
-            <div class="flex align-items-center gap-1">
-              <p-avatar
-                [label]="contact.name[0]"
-                shape="circle"
-                styleClass="mr-2"
-              />
-              <div class="contact-name">
-                <p class="font-medium text-lg capitalize">
-                  {{ contact.name }}
-                </p>
-              </div>
-            </div>
+    <ng-container *ngFor="let contact of contacts().data">
+      <li
+        class="flex justify-content-between align-items-center px-3 py-2 bg-white shadow-1 border-round-xl"
+      >
+        <div class="flex align-items-center gap-1">
+          <p-avatar
+            [label]="contact.name[0]"
+            shape="circle"
+            styleClass="mr-2"
+          />
+          <div class="contact-name">
+            <p class="font-medium text-lg capitalize">
+              {{ contact.name }}
+            </p>
+          </div>
+        </div>
 
-            <div class="text-cyan-600 lg:mr-8 lg:pr-8">
-              <div class="lg:mr-3">
-                @switch (contact.channel) { @case ("EMAIL") {
-                <i class="pi pi-envelope"></i>
-                } @case ("WHATSAPP") {
-                <i class="pi pi-whatsapp"></i>
-                } @case ("TELEGRAM") {
-                <i class="pi pi-telegram"></i>
-                } @case ("DISCORD") {
-                <i class="pi pi-discord"></i>
-                } }
-              </div>
-            </div>
-            <p-button
-              icon="pi pi-pencil"
-              [rounded]="true"
-              [text]="true"
-              severity="info"
-              (onClick)="onEdit(contact)"
-            ></p-button>
-          </li>
-        </ng-container>
-      </ul>
+        <div class="text-cyan-600 lg:mr-8 lg:pr-8">
+          <div class="lg:mr-3">
+            @switch (contact.platform) { @case ("EMAIL") {
+            <i class="pi pi-envelope"></i>
+            } @case ("WHATSAPP") {
+            <i class="pi pi-whatsapp"></i>
+            } @case ("TELEGRAM") {
+            <i class="pi pi-telegram"></i>
+            } @case ("DISCORD") {
+            <i class="pi pi-discord"></i>
+            } }
+          </div>
+        </div>
+        <p-button
+          icon="pi pi-pencil"
+          [rounded]="true"
+          [text]="true"
+          severity="info"
+          (onClick)="onEdit(contact)"
+        ></p-button>
+      </li>
     </ng-container>
   </ul>
-</div>
-<ng-template #noContent>
+</ul>
+<!-- <ng-template #noContent>
   <p class="text-center block mt-4">Nenhum contato cadastrado</p>
-</ng-template>
+</ng-template> -->
