--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -129,12 +129,7 @@
 </div>
 
 @if (contacts().isLoading) {
-<div class="mt-4 flex justify-content-center">
-  <p-progressSpinner
-    ariaLabel="loading"
-    styleClass="text-black"
-  />
-</div>
+<gl-loading></gl-loading>
 } @if (contacts().data!.length > 0) {
 
 <ul class="px-0 pt-2 flex flex-column gap-3">
