feat: add reminders route to root

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -28,17 +28,17 @@
       label="Novo lembrete"
       icon="pi pi-plus-circle"
       [outlined]="true"
-      routerLink="reminders/new"
+      routerLink="new"
       (click)="onClickMenuOption()"
     ></p-button>
   </ng-template>
 
   <ng-template pTemplate="content">
     <p-button
-      label="Hoje"
+      label="Meus lembretes"
       icon="pi pi-calendar"
       [outlined]="true"
-      routerLink="#"
+      routerLink=""
       (click)="onClickMenuOption()"
     ></p-button>
     <p-button
