--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -125,6 +125,7 @@
         [minDate]="minDate"
         styleClass="flex"
         dateFormat="dd/mm/yy -"
+        placeholder="Selecione uma data e hora"
       />
     </fieldset>
   </div>
