feat: add length validation in inputs name email password, login register

--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -26,6 +26,8 @@
         formControlName="title"
         placeholder="Digite o título da mensagem"
         id="title"
+        [minlength]="2"
+        [maxlength]="20"
       />
     </fieldset>
 
@@ -46,6 +48,8 @@
         id="description"
         formControlName="description"
         [autoResize]="true"
+        [minlength]="2"
+        [maxlength]="255"
       ></textarea>
     </fieldset>
 
