--- a/src/app/core/pages/user-account/register/register.component.html
+++ b/src/app/core/pages/user-account/register/register.component.html
@@ -19,6 +19,8 @@
           id="name"
           formControlName="name"
           class="w-full"
+          [minlength]="2"
+          [maxlength]="20"
         />
       </fieldset>
 
@@ -36,6 +38,8 @@
             placeholder="Digite seu email"
             id="email"
             [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('email') }"
+            [minlength]="2"
+            [maxlength]="60"
           />
         </span>
         <div *ngIf="inputInvalid('email')">
@@ -65,6 +69,8 @@
           [style]="{ width: '100%' }"
           [inputStyle]="{ width: '100%' }"
           promptLabel="Força da senha"
+          [minlength]="6"
+          [maxlength]="80"
         >
         </p-password>
         <div *ngIf="inputInvalid('password')">
@@ -95,6 +101,8 @@
           [style]="{ width: '100%' }"
           [inputStyle]="{ width: '100%' }"
           promptLabel="Força da senha"
+          [minlength]="6"
+          [maxlength]="80"
         >
         </p-password>
         <div *ngIf="inputInvalid('confirmPassword')">
