--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -130,7 +130,7 @@
 
 @if (contacts().isLoading) {
 <gl-loading></gl-loading>
-} @if (contacts().data!.length > 0) {
+} @else if (contacts().data!.length > 0) {
 
 <ul class="px-0 pt-2 flex flex-column gap-3">
   <ul class="px-0 pt-2 flex flex-column gap-3">
