--- a/src/app/core/pages/contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/contacts/add-contact/add-contact.component.html
@@ -42,6 +42,8 @@
           placeholder="Digite o nome do contato"
           id="name"
           [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('name') }"
+          [minlength]="2"
+          [maxlength]="60"
         />
       </span>
       <div *ngIf="inputInvalid('name')">
@@ -108,6 +110,8 @@
           [ngClass]="{
             'ng-invalid ng-dirty': inputInvalid('identify')
           }"
+          [minlength]="2"
+          [maxlength]="60"
         />
       </span>
       <div *ngIf="inputInvalid('identify')">
