--- a/src/app/core/pages/user-account/register/register.component.html
+++ b/src/app/core/pages/user-account/register/register.component.html
@@ -82,8 +82,7 @@
           <small
             class="text-red-600"
             *ngIf="getInputError('password', 'pattern')"
-            >A senha deve ter no minimo 6 caracteres<br />
-            sendo 1 maiusculo</small
+            >A senha deve ter no minimo 6 dígitos</small
           >
         </div>
       </fieldset>
