feat: show reminder template

--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -14,13 +14,12 @@
       <legend>
         <label
           for="title"
-          class="block mb-1"
+          class="mb-1"
         >
           Título
         </label>
       </legend>
       <input
-        type="text"
         class="w-full"
         pInputText
         formControlName="title"
@@ -35,7 +34,7 @@
       <legend>
         <label
           for="description"
-          class="block mb-1"
+          class="mb-1"
         >
           Mensagem
         </label>
@@ -57,9 +56,9 @@
       <legend>
         <label
           for="usersToReminder"
-          class="block mb-1"
+          class="mb-1"
         >
-          Destinatário
+          Destinatários
         </label>
       </legend>
       <p-multiSelect
@@ -116,7 +115,7 @@
       <legend>
         <label
           for="scheduled"
-          class="block mb-1"
+          class="mb-1"
         >
           Agendamento
         </label>
