--- a/src/app/core/pages/reminders/reminders.component.html
+++ b/src/app/core/pages/reminders/reminders.component.html
@@ -44,9 +44,6 @@
     </ng-template>
 
     <ng-template pTemplate="p-accordion-content">
-      <!-- <div>
-        <a [routerLink]="'show/' + reminder.id">Ver conteúdo</a>
-      </div> -->
       <p>{{ reminder.description }}</p>
 
       <div class="flex justify-content-end gap-2">
@@ -69,6 +66,7 @@
           [text]="true"
           icon="pi pi-chevron-right"
           [rounded]="true"
+          (onClick)="onShow(reminder.id)"
         ></p-button>
       </div>
     </ng-template>
